deployment/monitoring/nginx-ingress.yml
# https://devopscube.com/setup-ingress-gke-ingress-controller/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "gh-external-ingress"
spec:
  rules:
  - host: kas-us-east.ghost-pool.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pool-ingress
            port:
              number: 5555
  - host: grafana.ghost-pool.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-service
            port:
              number: 3000
