deployment/monitoring/prom-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ui
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: ghost-pool.io
    http:
      paths:
      - backend:
          service:
            name: prometheus-service
            port:
              number: 8080
